--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,3 +3,5 @@
 @article{shalev_shavit_2006, title={Split-ordered lists}, volume={53}, DOI={10.1145/1147954.1147958}, number={3}, journal={Journal of the ACM}, author={Shalev, Ori and Shavit, Nir}, year={2006}, month={Jan}, pages={379–405}}
 
 @book{herlihy_shavit_2012, place={Boston, MA}, title={The Art of Multiprocessor Programming}, publisher={Elsevier}, author={Herlihy, Maurice and Shavit, Nir}, year={2012}}
+
+@article{wong_boehm_gottschlich_luchangco_2015, title={Transactional Memory Support for C}, url={http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1961.pdf}, publisher={Transactional Memory Specification Drafting Group}, author={Wong, Michael and Boehm, Hans and Gottschlich, Justin and Luchangco, Victor and McKenney, Paul and Michael, Maged and Moir, Mark and Riegel, Torvald and Scott, Michael and Shpeisman, Tatiana and et al.}, year={2015}}
