Updating Implementation Section (almost done)

--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -63,29 +63,25 @@
 
 \section{Abstract}
 
-This paper expands upon the algorithm presented in \textit{Dynamic-Sized Nonblocking Hash Tables} by Liu et. al [1]. A specialization of their algorithm lies in "resizing in both directions: shrinking and growing." with the core of the algorithm being a "freezeable set abstraction, which greatly simplifies the task of moving elements among buckets during resize." [Liu et. al 2014]. Their algorithm is unique because previous attempts of a lock-free hash table (such as the variant by Shalev and Shavit [2]) did not support shrinking functionality. Furthermore, the freezable set abstraction in this paper expands on the normal operations of a set by adding a freeze method which prevents any thread from editing a given bucket while it is resized, simplifying the resize process [1].
+This paper expands upon an agorithm presented in \textit{Dynamic-Sized Nonblocking Hash Tables} by Liu et. al. A specialization of this algorithm lies in its ability to dynamically resize in both directions. This ability is achieved through a freezable set abstraction that expands upon the standard set operations. A freeze method prevents any thread from editing a given bucket during the hash table resizing process.
 
-We focus on the lock-free version of the hash table, using C++ to implement it. A minor difference lies in the fact that our implementation uses a Linked-List based set. The authors used a single flat array for its benefits regarding cache locality. However, an array-based implementation requires additional bookkeeping to avoid fragmentation. Our lock-free linked list Set implementation is derived from \textit{The Art of Multiprocessor Programming} by Herlihy and Shavit [3]. 
+We focus on the lock-free version of the hash table, using C++ to implement it. A minor difference lies in the fact that our implementation uses a Linked-List based set. The authors used a single flat array for its benefits regarding cache locality. However, an array-based implementation requires additional bookkeeping to avoid fragmentation. Our lock-free linked list Set implementation is derived from \textit{The Art of Multiprocessor Programming} by Herlihy and Shavit.
 
-The idea of freezing the hash set relies on a resizing operation, dictated by a heuristic policy. The original paper does not cover any preferred heuristics. Thus, we compare the application of various commonly used policies. We also implement a transactional variant of a sequential hash table for the purpose of comparing it to our lock-free concurrent implementation. Each method of the sequential hash table is treated as a seperate transaction. Our testing for each solution is done across varying hardware architectures in order to explore the solution's portability.  
+The idea of freezing the hash set relies on a resizing operation, dictated by a heuristic policy. The original paper does not cover any preferred heuristics. Thus, we compare the application of various commonly used policies. We also implement a transactional variant of a sequential hash table for the purpose of comparing it to our lock-free concurrent implementation. Our testing for each solution is done across varying hardware architectures in order to explore the solution's portability.
 
 \section{Categories and Subject Descriptors}
 
 D.1.3 [\textbf{Programming Techniques}]: Concurrent Programming -- \textit{Parallel Programming;} E.2 [\textbf{Data Storage Representations}]: Hash-table Representation
 
-\section{Implementation}
-
-In this section we will describe how we implemented each piece of Liu et. al's pseudocode while also implementing the code from Herlihy and Shavit.
+\section{Implementation & Architecture}
 
 \subsection{Freezable Set}
 
-The Freezable Set object (FSet) was designed encapsulating the FSetOp object from the pseudocode and our own Set object. The FSet object contains only \textit{set} and \textit{ok} variables and an FSetOp struct. The \textit{ok} variable is a single bit representing whether or not the FSet is frozen. If \textit{ok} is set to false, then \textit{set} becomes immutable and no threads can add or remove an element. Threads can still check if an element is in the frozen set and retrieve it; which is important for the \textit{InitBucket} method of our HashTable, which will repopulate the current head node's buckets with the data from the previous head node.
+The Freezable Set class (FSet) serves as a wrapper layer around the Set class. The FSet object contains \textit{set} and \textit{ok} variables and defines the FSetOp struct. The \textit{ok} variable is a single bit representing whether or not the FSet is frozen. If \textit{ok} is set to false, then \textit{set} becomes immutable and no threads can add or remove an element. Threads can still check if an element is in the frozen set and retrieve it; which is important for the \textit{InitBucket} method of our HashTable, which will repopulate the current head node's buckets with the data from the previous head node.
 
-\subsubsection{FSet Methods}
+The \textit{HasMember} method solely exposes the \textit{Contains} call of the underlying \textoit{Set} class. The \textit{Invoke} method triggers either an add or remove operation. This method checks if this operation has not already been completed and if it is a valid operation. After those conditions are met, either \textit{Set::Insert()} or \textit{Set::Remove()} is called dependind on the \textit{op.type} variable; which is set to an enum of either \textbf{INSERT} or \textbf{REMOVE}. The \textit{Freeze} method is simple, yet crucial to the functionality of making the hash table lock free. We made no changes to the Freeze method provided by [1].
 
-We next encapsulated the methods that affect an FSet object into the FSet class itself in order to simplify the calls. The \textit{HasMember} method takes in an integer and returns if it is found in the set or not. In our implementation, this calls the \textit{Set.contains()} method. The \textit{Invoke} method invokes either an add or remove operation based on the provided \textit{FSetOp} object. It first checks to make sure this operation has not already been completed and that it is a valid operation. This method calls both the \textit{Set.add()} and \textit{Set.remove()} methods depending on the \textit{op.type} variable; which is set to an enum of either \textbf{INSERT} or \textbf{REMOVE}. 
-
-The \textit{Freeze} method is simple, yet crucial to the functionality of making the hash table lock free. We made no changes to the Freeze method provided by [1].
+A size variable is added to the FSet class as an aide for one of the explored hash table resizing heuristic policies. This variable is only an estimate of the size of the set since it is modified past the linearization point of an \textit{Insert} or \textit{Remove} operation. Implementing a more accurate size query requires use of descriptor objects within the Set class. Descriptors would lead to unneccessary overhead since such size accuracy is not necessary solely for the purpose of determining when to resize.
 
 \subsubsection{FSetOp}
 
@@ -93,22 +89,29 @@ The FSetOp struct contains an enumeration with two values \textbf{INSERT} and \t
 
 \subsection{Set}
 
-The authors of [1] mention a set of integers, but do not go into detail as to how they implemented it. We decided on a Linked-List based Set class to represent the integer set of the FSet object. It is based off the Lock-Free version of the Set object given in \textit{The Art of Multiprocessor Programming} [3]. We made a slight modification to their Set object by adding a \textit{size} variable, which represents the size of each bucket. This variable is necessary as this is how our heuristic policies dictate when the buckets need to be resized. Initially, we made the size of the buckets 1000, with an estimate of 500,000 operations per test case. This Set class is made up of Node objects, also found in [3]. The only other change we make to the code provided by Herlihy and Shavit [3] is removing the \textit{key} variable from the Node class. Since we are using integers for the values we can simply sort the table on them, so we do not need a hash key. The Window object from [3] is also included for usage in traversing the list. 
+The authors of [1] use an array-based set for the core of their bin implementation. However, they do not go into the details of their Set implementation since it is irrelevant to the lock-free hash table algorithm. We use a linked-list based Set class to represent the integer set of the FSet object based on the lock-free version of the Set object given in \textit{The Art of Multiprocessor Programming} [3]. The lock-free Insert and Remove operations provided by this algorithm are necessary to maintain the lock-free property of the hash table. Our chosen Set algorithm also provides a wait-free Contains operation, which is the operation most commonly used in a data structure. The values contained within the Nodes are unique integers and ordered, thus also serving as keys to Node objects in our implementation.
 
-\subsubsection{Set Methods}
+The Set class supports two traversal methods. Set::Find is used for internal traversal within the Set::Insert and Set::Remove calls in order to provide a window of two nodes. The Set::Find method can also plays a part of a lazy removal process. It physically removes any Nodes that have been logically flagged for removal. The logical removal flag is embedded within the first bit of the pointer that links the Node. Bit-stealing is used in order to avoid the overhead of using a descriptor object and to maintain linearizability. The physical deletion is done using a CAS call. If this CAS call fails, then a neighboring Node must have been inserted or removed and the traversal must start over from the first sentinal Node. Such failure denotes that another thread must be making progress.
 
-All methods of our Set object are the same as those provided by [3], with an additional method \textit{Union}. A union operation is specified in the \textit{Invoke} method of [1] but in order to get the proper functionality we needed to abstract it into a method. It takes in a Set object and merges it with the Set object that called the method, returning the Set with all the data from both.
+Set::Contains provides the other traversal method, which always traverses each Node once and linearizes in a deterministic amount of steps. This deterministic quality of Set::Contains guarantees wait-freedom. The Set::Contains method linearizes once it has found a Node that has a value that is NOT less than the value that is being queried. If the first such value found is greater than the value queried, then the value queried is not in the Set since the Nodes are ordered based on their values.
+ 
+The Set::Remove method obtains a Set::Window of two Nodes using Set::Find based on the value that is to be removed. If the second of these Nodes has a value different from the one to be removed, then the value to be removed does not exist in the Set and the Set::Remove call fails and returns false. Alternatively, if the value to be removed is found, then the corresponding Node is logically flagged for deletion using a CAS call. Similarly to the physical removal in Set::Find, failure of this CAS call denotes that a another thread has made progress by inserting or removing a neighboring Node. In such case of this CAS failure, the Set must be re-traversed from the beginning. A logical deletion is attemped using CAS call following the physical deletion. It is okay for this second CAS to fail as the Node will be physically deleted in the following Set::Find call.
+
+The Set::Insert method also obtains a Set::Window of two Nodes, similarly to Set::Remove. If the value of the latter of the Nodes is equal to value being inserted, then the value already exists and the Set::Insert call fails by returning false. Otherwise, the value is inserted between the two Nodes from the Set::Window object. A new Node is created using the value being inserted. This Node is inserted using a CAS call. If the CAS call happens to fail, it is only due to another call making progress and the Set must be retraversed once again.
+
+The original algorithm provided by Herlihy and Shavit [3] is extended with the implementation of the \textit{Set::Union} and \textit{Set::IntersectionRemainder} methods. Such methods are utilized for the binary resizing capability of the housing hash table class. A Set::Union call is provided with another Set as an argument, which is combined with the Set instance upon which the method is called. The Set::IntersectionRemainder iterates through the Nodes of the Set instance upon which the method was called and picks any Nodes that meet a criteria into a new Set. The criteria is that the value of the Node must have a given remainder when divided by a given divisor. Both of the aforementioned methods do not require thread-safe properties because they are only called once parenting FSet class has been frozen and no further modifications to the Set can be made.   
 
 
 \subsection{Hash Table}
 
-Next, we will go into details of how we implemented the Hash Node (HNode) object from [1]. We created a HashTable class with an HNode struct and encapsulated all the methods that operate on HNodes into the HashTable class. 
+As most hash tables, this one's public interface supports three methods: \textit{Insert}, \textit{Remove}, and \textit{Contains}. The pseudocode for these methods are specified in [1]. This HashTable implementation can house up to two internal hash tables, which are referred to HNodes in [1]. Having up to two HNodes allows for the unique resizing properties of this lock-free data structure. Below are two critical distictions between the HNodes:
+The first HNode must always be present and is accessed via a head HNode member pointer. The second HNode can be accessed through the \textit{pred} pointer of the first HNode and is non-existant if that pointer equals NULL. The HNode pointers are atomic variables since they can be accessed by multiple threads.
+The first bin can have un-initialized (NULL) bins. The second HNode is used to initialize the bins of the first HNode. All bins of the second HNode MUST be initialized and cannot be NULL. A third HNode is not present to initialize the bins of the second HNode.
 
-\subsubsection{Hash Table Methods}
+Set::Resize is an internal call that can be triggerred by an Insert or Remove based on a heuristic policy. The heuristic policy choise can significantly impact performance. Set::Resize should'nt be called too often since the Set::Resize call is expensive. However, Set::Resize should be called often enough so that the bin sizes do not become too large, which would result in expensive traversals.
 
-The Hash Table has three public methods: \textit{Insert}, \textit{Remove}, and \textit{Contains}, all specified in [1]. There were no differences in our methods other than in \textit{Contains} where we made sure to atomically load the head node and the exact specifications of the heuristic-policy in \textit{Insert} and \textit{Remove}. Since [1] did not specify a heuristic policy there was no way we could implement theirs; in addition to us often changing the policy so we could experiment with which one performed the best.
+The implementation of Set::Resize initializes all of the bins in the first HNode that have not already been initialized. A new HNode is created with a number of bins equal to double or half of the bins in the first HNode. The current first HNode is set as the pred pointer of the newly created HNode in preparation to make it a second HNode and the newly created HNode is set as the first HNode using a CAS call. If the CAS fails, it is only due to another Set::Resize call (triggerred by another Insert or Remove) successfully executing its resize. Since the HashTable has been resized even when the CAS fails, the CAS call does not need to be reattempted. This CAS call represents the linearization point of the resizing functionality of the HashTable. No bins are initialized in the first HNode immediately following a resize. Instead, the work for initializing the bins in the first HNode is distributed amongst the future calls that access those bins.
 
-The Hash Table also has three private methods and one private variable. The \textit{m\_head} variable is a pointer to an HNode object that is currently the head of the Hash Table. This variable is atomic, and all operations will be performed on the HNode that is the head of the Hash Table. Again, the only difference between our implementations was that we began by atomically loading the head node, which is never explicitly stated in the pseudocode provided by [1].
 
 
 The \textit{Resize} method operates exactly as it does in the provided pseudocode from [1]. The Compare and Set call is done by making the head node atomic and then calling \textit{compare\_exchange\_strong}. The \textit{InitBucket} method also operates the same as in [1] with only a few differences to point out. The Set object initialized in this method is of our Set class implemented with the pseudocode from [3] and the Union performed on line 48 of the Lock-Free method of [1] is done using the \textit{Union} method of Set. Finally, the Compare and Set is done using a call to \textit{compare\_exchange\_strong} to put it into the HNode atomically since the buckets are also atomic. 
